# OpensslByAndroid

./: build.gradle  gradle.properties  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
openssllib/: TestOpenssl.jks  build.gradle  proguard-rules.pro
openssllib/src/androidTest/java/cn/dabby/openssllib/: ExampleInstrumentedTest.kt
openssllib/src/main/: AndroidManifest.xml
openssllib/src/main/cpp/: AesUtils.cpp  Base64Utils.cpp  CMakeLists.txt  CommonUtils.cpp  CommonUtils.h  DesUtils.cpp  LogUtils.cpp  MD5Utils.cpp  Md5Utils.cpp  RsaUtils.cpp  Sm3Utils.cpp  Sm4Utils.cpp  crypto_lib.cpp
openssllib/src/main/cpp/ctyptoHeader/: AesUtils.h  Base64Utils.h  CommonUtils.h  DesUtils.h  Md5Utils.h  RsaUtils.h  Sm3Utils.h  Sm4Utils.h
openssllib/src/main/cpp/openssl/: opensslconf.h
openssllib/src/main/java/cn/dabby/openssllib/: AesActivity.kt  Base64Activity.kt  CryptographicUtils.kt  DESActivity.kt  MainActivity.kt  OpensslApp.kt  RsaActivity.kt  TTSActivity.kt  TestEntity.kt  TestH5AuthActivity.java  TestOther.kt
openssllib/src/main/java/cn/dabby/openssllib/utils/: AesCbcUtil.java  AesEcbUtil.java  Des3Util.java  PhotoUtils.java  RSAUtil.java  StringTool.java  TestPrintln.java  UtilTool.java
openssllib/src/main/res/layout/: activity_aes.xml  activity_base_64.xml  activity_des.xml  activity_h5_auth.xml  activity_main.xml  activity_rsa.xml  activity_tts.xml
openssllib/src/main/res/values/: strings.xml
openssllib/src/main/res/xml/: badge_face_photo.xml  network_security_config.xml
openssllib/src/test/java/cn/dabby/openssllib/: ExampleUnitTest.kt
